--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Firebase SDK version 8.x -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <style>
       .container {
         max-width: 800px;
@@ -114,7 +114,7 @@
 
         // Sign in the user
         auth.signInWithEmailAndPassword(email, password)
-    .then((userCredential) => {
+        .then((userCredential) => {
         var user = userCredential.user;
         console.log('User logged in:', user);
 
@@ -162,20 +162,20 @@ googleButton.addEventListener('click', () => {
   auth.signInWithPopup(provider)
     .then((result) => {
       // User is signed in with Google
-      var user = result.user;
-      console.log('User logged in with Google:',user );
+        var user = result.user;
+        console.log('logged in with Google:',user ); 
 
       M.toast({ 
         html: 'Welcome : ' + user.displayName, 
         classes: 'rounded green lighten-2',
         displayLength: 5000 // Duration of the toast in milliseconds
       });
+      createUserCollection(result.user);
       M.toast({ 
-        html: 'You are logged in with :' + user.email, 
+        html: 'You are logged in with : ' + user.email, 
         classes: 'rounded grey darken-2',
         displayLength: 5000 // Duration of the toast in milliseconds
       });
-
       // Redirect after the toast disappears
       setTimeout(function() {
         window.location.href = "home.html";
@@ -189,11 +189,10 @@ googleButton.addEventListener('click', () => {
       });
     });
 });
-
-
 </script>
 
     
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="./firestore-db.js"></script>
 </body>
 </html>
