--- a/signup.html
+++ b/signup.html
@@ -50,7 +50,7 @@
     <!-- Load the main JavaScript file -->
     <script src="./Script/signup.js"></script>
     <!-- Load the Firestore database JavaScript file -->
-    <script src="./firestore-db.js"></script>
+    <script src="./Script/firestore-db.js"></script>
 
      <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
